AC_INIT(src/GameMain.cpp)
AM_INIT_AUTOMAKE(xmoto,0.1.8)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

AC_CHECK_LIB(jpeg,jpeg_CreateCompress, [], [
        echo "libjpeg required!"
        exit -1
        ])

AC_CHECK_LIB(png,png_read_image, [], [
        echo "libpng required!"
        exit -1
        ])

AC_CHECK_LIB(SDL,SDL_Init, [], [
        echo "SDL required!"
        exit -1
        ])

AC_CHECK_LIB(GL,glVertex3f, [], [
        echo "OpenGL required!"
        exit -1
        ])

AC_CHECK_LIB(vorbis,vorbis_synthesis_blockin, [], [
        echo "libvorbis required!"
        exit -1
        ])

AC_CHECK_LIB(ogg,oggpack_adv, [], [
        echo "libogg required!"
        exit -1
        ])

AC_CHECK_LIB(vorbisfile,ov_read, [], [
        echo "vorbisfile required!"
        exit -1
        ])
        
AC_SEARCH_LIBS(lua_pushboolean,lua lua50, [], [
        echo "liblua50 or liblua required!"
        exit -1
        ])

AC_SEARCH_LIBS(luaopen_math,lualib lualib50, [], [
        echo "liblualib50 or liblualib required!"
        exit -1
        ])

AC_CHECK_HEADER(lua50/lua.h,AC_DEFINE(HAVE_LUA50_LUA_H),[])
AC_CHECK_HEADER(lua50/lauxlib.h,AC_DEFINE(HAVE_LUA50_LAUXLIB_H),[])
AC_CHECK_HEADER(lua50/lualib.h,AC_DEFINE(HAVE_LUA50_LUALIB_H),[])

AC_CHECK_HEADER(lua/lua.h,AC_DEFINE(HAVE_LUA_LUA_H),[])
AC_CHECK_HEADER(lua/lauxlib.h,AC_DEFINE(HAVE_LUA_LAUXLIB_H),[])
AC_CHECK_HEADER(lua/lualib.h,AC_DEFINE(HAVE_LUA_LUALIB_H),[])

AC_SEARCH_LIBS(dJointAttach,ode ode0, [], [
        echo "libode or libode0 required!"
        exit -1
        ])

AC_CHECK_LIB(SDL_mixer,Mix_OpenAudio, [], [
        echo "SDL_mixer required!"
        exit -1
        ])

AC_OUTPUT(Makefile bin/Makefile)

