AC_INIT(src/GameMain.cpp)
AM_INIT_AUTOMAKE(xmoto,0.1.10)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

AC_CHECK_LIB(jpeg,jpeg_CreateCompress, [], [AC_MSG_ERROR(libjpeg required)])
AC_CHECK_LIB(png,png_read_image, [], [AC_MSG_ERROR(libpng required)])
AC_CHECK_LIB(z,uncompress, [], [AC_MSG_ERROR(zlib required)])
AC_CHECK_LIB(SDL,SDL_Init, [], [AC_MSG_ERROR(SDL required)])
AC_CHECK_LIB(SDL_mixer,Mix_OpenAudio, [], [AC_MSG_ERROR(SDL_mixer required)])
AC_CHECK_LIB(GL,glVertex3f, [], [AC_MSG_ERROR(OpenGL required)])

AC_SEARCH_LIBS(lua_pushboolean,lua lua50, [], [AC_MSG_ERROR(liblua50 or liblua required)])
AC_SEARCH_LIBS(luaopen_math,lualib lualib50, [], [AC_MSG_ERROR(liblualib50 or liblualib required)])

AC_CHECK_HEADER(lua50/lua.h,AC_DEFINE(HAVE_LUA50_LUA_H),[])
AC_CHECK_HEADER(lua50/lauxlib.h,AC_DEFINE(HAVE_LUA50_LAUXLIB_H),[])
AC_CHECK_HEADER(lua50/lualib.h,AC_DEFINE(HAVE_LUA50_LUALIB_H),[])

AC_CHECK_HEADER(lua/lua.h,AC_DEFINE(HAVE_LUA_LUA_H),[])
AC_CHECK_HEADER(lua/lauxlib.h,AC_DEFINE(HAVE_LUA_LAUXLIB_H),[])
AC_CHECK_HEADER(lua/lualib.h,AC_DEFINE(HAVE_LUA_LUALIB_H),[])

AC_CHECK_HEADER(lua.h,AC_DEFINE(HAVE_LUA_H),[])
AC_CHECK_HEADER(lauxlib.h,AC_DEFINE(HAVE_LAUXLIB_H),[])
AC_CHECK_HEADER(lualib.h,AC_DEFINE(HAVE_LUALIB_H),[])

AC_SEARCH_LIBS(dJointAttach,ode ode0, [], [AC_MSG_ERROR(libode or libode0 required)])

AC_OUTPUT(Makefile bin/Makefile)
